--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ background-position: center;
 
 <body class="bg center">
     <h1 class="title center">2023 여행계획</h1>
-    <p class="msg">규리야 </p>
+    <p class="msg">규리야 여행가자</p>
     <div class="flex-row wrap">
     <div class="bucket img1 center">대만 가기</div>
     <div class="bucket img2 center">일본 가기</div>
